err/wine-wrap.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/appdirs-1.4.3.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sh-1.12.14.dist-info'...
Listing './lib/python3.5/site-packages/wine_wrap'...
Compiling './lib/python3.5/site-packages/wine_wrap/fs_handler.py'...
***   File "./lib/python3.5/site-packages/wine_wrap/fs_handler.py", line 72
    self.prefix_image_path = f'{prefix_dir}/../prefix_data.img'
                                                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/wine_wrap/main.py'...
***   File "./lib/python3.5/site-packages/wine_wrap/main.py", line 34
    print(f'--- {prefix_name} ---')
                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/wine_wrap/prefix_handler.py'...
***   File "./lib/python3.5/site-packages/wine_wrap/prefix_handler.py", line 19
    self.master_prefix = f'{prefix_dir}/master_prefix'
                                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/wine_wrap/utils.py'...
***   File "./lib/python3.5/site-packages/wine_wrap/utils.py", line 16
    state_file = f'{adirs.user_data_dir}/state.csv'
                                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/wine_wrap/wine_wrapper.py'...
***   File "./lib/python3.5/site-packages/wine_wrap/wine_wrapper.py", line 18
    print(f'Initializing wine-wrapper for "{script_name}"...')
                                                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/wine_wrap-0.1.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
